imagetoocr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-to-ocr
  labels:
    app: image-to-ocr
spec:
  replicas: 3
  selector:
    matchLabels:
      app: image-to-ocr
  template:
    metadata:
      labels:
        app: image-to-ocr
    spec:
      containers:
      - name: image-to-ocr
        image: romulorm/image-to-ocr:latest
        ports:
        - containerPort: 3001
        
---

apiVersion: v1
kind: Service
metadata:
  name: image-to-ocr-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: image-to-ocr
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30000
